--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
+    "release": "bash scripts/release.sh",
     "prepare": "husky"
   },
   "lint-staged": {
