--- a/package.json
+++ b/package.json
@@ -3,6 +3,23 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "description": "Browser-based HD map editor for Apollo autonomous driving platform. Draw lanes, junctions, signals, export base_map/sim_map/routing_map .bin files.",
+  "keywords": [
+    "apollo",
+    "hd-map",
+    "high-definition-map",
+    "map-editor",
+    "autonomous-driving",
+    "apollo-autopilot",
+    "maplibre",
+    "mapbox-gl-draw",
+    "protobuf",
+    "routing-map",
+    "lane-editor",
+    "vite",
+    "react",
+    "typescript"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
