--- a/package.json
+++ b/package.json
@@ -47,13 +47,18 @@
     "@hookform/resolvers": "^5.2.2",
     "@mapbox/mapbox-gl-draw": "^1.5.1",
     "@turf/turf": "^7.3.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "immer": "^11.1.4",
+    "lucide-react": "^0.575.0",
     "maplibre-gl": "^5.19.0",
     "proj4": "^2.20.2",
     "protobufjs": "^8.0.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.2",
+    "tailwind-merge": "^3.5.0",
     "zod": "^4.3.6",
     "zundo": "^2.3.0",
     "zustand": "^5.0.11"
@@ -76,7 +81,9 @@
     "lint-staged": "^16.2.7",
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
+    "shadcn": "^3.8.5",
     "tailwindcss": "^4.2.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^7.3.1",
