--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@mapbox/mapbox-gl-draw": "^1.5.1",
     "@turf/turf": "^7.3.4",
+    "access-guard": "^0.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "immer": "^11.1.4",
