--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "apollo-map-studio",
   "private": true,
+  "license": "CC-BY-NC-4.0",
   "version": "0.2.0",
   "type": "module",
   "description": "Browser-based HD map editor for Apollo autonomous driving platform. Draw lanes, junctions, signals, export base_map/sim_map/routing_map .bin files.",
